--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"剑桥的个人博客",
+    "subTitle":"记录一些学习日常",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/112452179?v=4",
     "GMEEK_VERSION":"last"
 }
